# mandelbulb-generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Taskfile.yml  conanfile.py
.github/scripts/: conan-ci-emscripten-setup.sh  conan-ci-setup.sh  emscripten
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
shaders/: triangle.vert
shaders/fragment/: mandelbulb.glsl  mandelbulb_core.glsl  mandelbulb_es.glsl  triangle.glsl
shaders/vertex/: single_triangle.glsl  single_triangle_core.glsl  single_triangle_es.glsl  triangle.glsl
source/: camera.cpp  camera.hpp  camera_ubo.cpp  camera_ubo.hpp  config.hpp  cubemap.cpp  cubemap.hpp  glfw_handle.cpp  glfw_handle.hpp  initialization.hpp  lib.cpp  lib.hpp  main.cpp  mouse_tracker.hpp  opengl_bindings.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  triangle.hpp  util.hpp
source/app/: engine.cpp  engine.hpp
source/bgfx/: main.cpp
source/handles/: cubemap.cpp  cubemap.hpp  glfw_context_handle.cpp  glfw_window_handle.hpp  image.cpp  program.cpp  program.hpp  shader.cpp  shader.hpp
source/math/: camera.cpp  camera.hpp
source/opengl/: camera.cpp  camera_ubo.cpp  camera_ubo.hpp  cubemap.cpp  lib.cpp  lib.hpp  main.cpp  program.cpp  program.hpp  util.cpp
source/opengl/handles/: glfw_context_handle.hpp
source/platform/: glfw_context_handle.cpp  glfw_window_handle.cpp  glfw_window_handle.hpp
source/render/: camera_uniform_buffer.cpp  camera_uniform_buffer.hpp  cubemap.cpp  cubemap.hpp  image.cpp  image.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  uniform_camera_args.hpp
test/: CMakeLists.txt
test/source/: mandelbulb-generator_test.cpp
